--- a/pinyougou-shop-web/pom.xml
+++ b/pinyougou-shop-web/pom.xml
@@ -87,6 +87,11 @@
             <version>1.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.pinyougou</groupId>
+            <artifactId>pinyougou-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <!-- 身份验证 -->
         <dependency>
             <groupId>org.springframework.security</groupId>
