新增：运营商管理后台-广告管理-工程构建与生成代码

--- a/pom.xml
+++ b/pom.xml
@@ -286,5 +286,7 @@
         <module>pinyougou-sellergoods-service</module>
         <module>pinyougou-manager-web</module>
         <module>pinyougou-shop-web</module>
+        <module>pinyougou-content-service</module>
+        <module>pinyougou-content-interface</module>
     </modules>
 </project>
