--- a/pinyougou-pojo/pom.xml
+++ b/pinyougou-pojo/pom.xml
@@ -18,6 +18,11 @@
             <version>1.18.8</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-solr</artifactId>
+            <version>1.5.5.RELEASE</version>
+        </dependency>
 
     </dependencies>
 
