--- a/pom.xml
+++ b/pom.xml
@@ -289,5 +289,6 @@
         <module>pinyougou-content-service</module>
         <module>pinyougou-content-interface</module>
         <module>pinyougou-portal-web</module>
+        <module>pinyougou-solr-util</module>
     </modules>
 </project>
