--- a/pinyougou-sellergoods-service/pom.xml
+++ b/pinyougou-sellergoods-service/pom.xml
@@ -70,7 +70,7 @@
             <artifactId>fastjson</artifactId>
         </dependency>
         <dependency>
-            <groupId>javassist</groupId>
+            <groupId>org.javassist</groupId>
             <artifactId>javassist</artifactId>
         </dependency>
         <dependency>
@@ -91,6 +91,11 @@
         <dependency>
             <groupId>com.pinyougou</groupId>
             <artifactId>pinyougou-dao</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.pinyougou</groupId>
+            <artifactId>pinyougou-common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
