--- a/pinyougou-page-service/pom.xml
+++ b/pinyougou-page-service/pom.xml
@@ -90,6 +90,10 @@
             <artifactId>pinyougou-dao</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+        </dependency>
 
     </dependencies>
 
