--- a/pinyougou-manager-web/pom.xml
+++ b/pinyougou-manager-web/pom.xml
@@ -99,10 +99,16 @@
             <artifactId>pinyougou-content-interface</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <!--解耦springJMS
         <dependency>
             <groupId>com.pinyougou</groupId>
             <artifactId>pinyougou-search-interface</artifactId>
             <version>1.0-SNAPSHOT</version>
+        </dependency>-->
+        <dependency>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>activemq-client</artifactId>
+            <version>5.13.4</version>
         </dependency>
         <dependency>
             <groupId>com.pinyougou</groupId>
