--- a/pinyougou-search-service/pom.xml
+++ b/pinyougou-search-service/pom.xml
@@ -89,6 +89,11 @@
             <artifactId>pinyougou-common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>activemq-client</artifactId>
+            <version>5.13.4</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
