新增：消息中间件-运营商管理后台解耦页面生成服务（springJMS 订阅模式实现）

--- a/pinyougou-manager-web/pom.xml
+++ b/pinyougou-manager-web/pom.xml
@@ -110,11 +110,12 @@
             <artifactId>activemq-client</artifactId>
             <version>5.13.4</version>
         </dependency>
-        <dependency>
+       <!--解耦springJMS
+       <dependency>
             <groupId>com.pinyougou</groupId>
             <artifactId>pinyougou-page-interface</artifactId>
             <version>1.0-SNAPSHOT</version>
-        </dependency>
+        </dependency>-->
         <dependency>
             <groupId>com.pinyougou</groupId>
             <artifactId>pinyougou-common</artifactId>
