--- a/pinyougou-user-service/pom.xml
+++ b/pinyougou-user-service/pom.xml
@@ -100,6 +100,12 @@
             <artifactId>activemq-client</artifactId>
             <version>5.13.4</version>
         </dependency>
+        <!--腾讯云短信-->
+        <dependency>
+            <groupId>com.github.qcloudsms</groupId>
+            <artifactId>qcloudsms</artifactId>
+            <version>1.0.6</version>
+        </dependency>
     </dependencies>
 
     <build>
