--- a/pinyougou-cart-web/pom.xml
+++ b/pinyougou-cart-web/pom.xml
@@ -116,6 +116,12 @@
             <artifactId>pinyougou-cart-interface</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.pinyougou</groupId>
+            <artifactId>pinyougou-user-interface</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 
