--- a/pom.xml
+++ b/pom.xml
@@ -302,5 +302,7 @@
         <module>pinyougou-cart-interface</module>
         <module>pinyougou-cart-service</module>
         <module>pinyougou-cart-web</module>
+        <module>pinyougou-order-interface</module>
+        <module>pinyougou-order-service</module>
     </modules>
 </project>
