--- a/pinyougou-order-service/pom.xml
+++ b/pinyougou-order-service/pom.xml
@@ -89,6 +89,11 @@
             <artifactId>pinyougou-order-interface</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.pinyougou</groupId>
+            <artifactId>pinyougou-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
