--- a/pinyougou-page-web/pom.xml
+++ b/pinyougou-page-web/pom.xml
@@ -7,6 +7,7 @@
         <groupId>com.pinyougou</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
+    <artifactId>pinyougou-page-web</artifactId>
     <modelVersion>4.0.0</modelVersion>
     <packaging>war</packaging>
     <dependencies>
@@ -53,7 +54,22 @@
             <scope>provided</scope>
         </dependency>
     </dependencies>
-    <artifactId>pinyougou-page-web</artifactId>
+
+    <profiles>
+        <profile>
+            <id>dev</id>
+            <properties>
+                <port>9105</port>
+            </properties>
+        </profile>
+        <profile>
+            <id>pro</id>
+            <properties>
+                <port>9205</port>
+            </properties>
+        </profile>
+    </profiles>
+
     <build>
         <plugins>
             <plugin>
@@ -62,7 +78,7 @@
                 <version>2.2</version>
                 <configuration>
                     <!-- 指定端口 -->
-                    <port>9105</port>
+                    <port>${port}</port>
                     <!-- 请求路径 -->
                     <path>/</path>
                 </configuration>
