--- a/pinyougou-common/src/main/resources/properties/redis-config.properties
+++ b/pinyougou-common/src/main/resources/properties/redis-config.properties
@@ -2,9 +2,9 @@
 # server IP 
 redis.host=47.98.184.17
 # server port 
-redis.port=6379
+redis.port=6370
 # server pass 
-redis.pass=tp7tUM8sug4=
+redis.pass=RJLiJaoragM=
 # use dbIndex 
 redis.database=0
 # \u63A7\u5236\u4E00\u4E2Apool\u6700\u591A\u6709\u591A\u5C11\u4E2A\u72B6\u6001\u4E3Aidle(\u7A7A\u95F2\u7684)\u7684jedis\u5B9E\u4F8B 
